tests/errors/ring_buffer_missing_use.ptt
spark {
  r is ring_with_cap of int (4)
  yell(r.len())
}
